--- a/gaga/index.html
+++ b/gaga/index.html
@@ -11,12 +11,12 @@
         <header class="cabeçalho">
             <div class="container">
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-                <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+                <img src="Logo.png" alt="Logo da AluraBooks" class="container__imagem">
             </div>
             <div class="container">
-                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-                <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-                <a href="#"><img src="img/Usuario.png" alt="Meu perfil" class="container__imagem"></a>
+                <a href="#"><img src="Favoritos-1.svg" alt="Meus favoritos" class="container__imagem"></a>
+                <a href="#"><img src="Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+                <a href="#"><img src="Usuario.png" alt="Meu perfil" class="container__imagem"></a>
             </div>
         </header>
         
